# axum-openssl-demo

./: .env  Cargo.toml  README.md
certs/: signed_ca.pem
src/: lib.rs  main.rs
src/api_client/: cloud_api.rs  mod.rs
src/error_handling/: bad_request.rs
src/routes/: cert_sign_request.rs  csr_signer.rs  mod.rs  mqtt_publisher.rs  provisioning_request.rs  qoute_of_day.rs
