[package]
name = "device-provisioning-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version  = "1.0.159", features = ["derive"]}
sha256 = "1.1.2"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.33"
reqwest = { version = "0.11", features = ["json"] }
jwt = {version= "0.16.0"}
hmac = "0.12.1"
sha2 = "0.10.6"
paho-mqtt = "0.12.1"
futures = "0.3.28"
env_logger = "0.10.0"
luhn = "1.0.1"
openssl = "0.10.49"
x509-parser = "0.15.0"
regex = "1.7.3"
